[package]
name = "armistice"
description = """
Hardware private key storage for next-generation cryptography (e.g. BLS)
"""
version    = "0.0.0"
license    = "Apache-2.0"
authors    = ["Tony Arcieri <bascule@gmail.com>"]
edition    = "2018"
readme     = "README.md"
repository = "https://github.com/iqlusioninc/armistice"
categories = ["cryptography", "hardware-support", "no-std"]
keywords   = ["bls", "ed25519", "ecdsa", "hsm"]

[dependencies]

[package.metadata.docs.rs]
all-features = true
