[workspace]
members = [
    "core",
    "client",
    "schema",
    "usbarmory"
]

[patch.crates-io]
veriform = { git = "https://github.com/iqlusioninc/veriform.git", branch = "develop" }

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
