[package]
name = "armistice_core"
description = """
Core implementation of Armistice: hardware private key storage for
next-generation cryptography (e.g. BLS)
"""
version    = "0.0.0"
license    = "Apache-2.0"
authors    = ["Tony Arcieri <bascule@gmail.com>"]
edition    = "2018"
readme     = "README.md"
homepage   = "https://github.com/iqlusioninc/armistice/"
repository = "https://github.com/iqlusioninc/armistice/tree/develop/core"
categories = ["cryptography", "hardware-support", "no-std"]
keywords   = ["bls", "ed25519", "ecdsa", "hsm"]

[dependencies]
aes-gcm-siv = { version = "0.5", default-features = false, features = ["heapless"] }
armistice_schema = { version = "0", path = "../schema" }
block-cipher = "0.7"
displaydoc = { version = "0.1", default-features = false }
ecdsa = { version = "0.5", optional = true, default-features = false, features = ["p256"] }
heapless = "0.5"

[dev-dependencies]
aes = "0.4"

[features]
default = ["ecdsa"]
std = []

[package.metadata.docs.rs]
all-features = true
