[package]
name = "armistice_schema"
description = "Armistice message schema definitions"
version    = "0.0.0"
license    = "Apache-2.0"
authors    = ["Tony Arcieri <bascule@gmail.com>"]
edition    = "2018"
readme     = "README.md"
homepage   = "https://github.com/iqlusioninc/armistice/"
repository = "https://github.com/iqlusioninc/armistice/tree/develop/schema"
categories = ["cryptography", "hardware-support"]
keywords   = ["bls", "ed25519", "ecdsa", "hsm"]

[dependencies]
heapless = "0.5"

[dependencies.veriform]
version = "0.2"
default-features = false
features = ["builtins", "sha2", "veriform_derive"]

[dev-dependencies]
veriform = { version = "0.2", default-features = false, features = ["builtins", "log"] }
env_logger = "0.7"

[package.metadata.docs.rs]
all-features = true
